# scratch-wasm-renderer

./: CMakeLists.txt  README.md  TODO.txt
src/: CMakeLists.txt
src/main/: CMakeLists.txt  ScratchRenderer.h  main.cpp
src/main/WebGL/: Canvas.cpp  Canvas.h  WebGl.cpp  WebGl.h  types.h
src/main/core/: ScratchRenderer.cpp  ScratchRenderer.h  main.h
src/main/render/: Color.cpp  Color.h  Drawable.cpp  Drawable.h  Id.cpp  Id.h  ImageData.cpp  ImageData.h  IsTouching.cpp  IsTouching.h  ShaderManager.h  Silhouette.h  Skin.cpp  Skin.h  effectTransform.cpp  effectTransform.h  ir.cpp  ir.ll  shaderEffects.h  types.h  utils.cpp  utils.h
src/main/render/hull/: convex.cpp  convex.h  grid.cpp  grid.h  hull.cpp  hull.h  types.h
src/main/render/scratch/: BitmapSkin.cpp  BitmapSkin.h  Drawable.cpp  Drawable.h  Drawable.ll  IsTouching.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  Silhouette.cpp  Silhouette.h  Skin.cpp  Skin.h  color.cpp  color.h  effectTransform.cpp  effectTransform.h  shaderEffects.cpp  shaderEffects.h  types.cpp  types.h
src/main/twgl/: FrameBufferInfo.cpp  FrameBufferInfo.h  Twgl.cpp  Twgl.h
src/share/common/: Setter.cpp  Setter.h
src/share/common/array/: Array.h  Array.test.cpp  ArrayInterface.h  is_std_array.h
src/share/common/math/: Mat.cpp  Mat.h  Mat4.cpp  Mat4.h  NRect.cpp  NRect.h  Rect.cpp  Rect.h  Vec.cpp  Vec.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  interval.cpp  interval.h  math.h  utils.cpp  utils.h
src/share/stde/: by.cpp  by.h  get_or_default.cpp  get_or_default.h
